<resources>
    <string name="app_name">Tutr</string>

    <!-- Facebook strings -->
    <string name="facebook_app_id">183891708722672</string>
    <string name="fb_login_protocol_scheme">fb183891708722672</string>

    <!-- Login and login creation strings -->
    <string name="action_sign_in_short">Login</string>
    <string name="create_profile_create">Create Account with Email and Password</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Need an account? Create one here.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="fb_signin_msg">Register with Facebook</string>
    <string name="google_signin_msg">Register with Google</string>
    <string name="title_activity_user_profile">UserProfile</string>

<<<<<<< HEAD
    <!-- Find tutor strings -->
    <string name="institution_name">Institution</string>
    <string name="subject_name">Subjects</string>
    <string name="firebase_URL">https://tutoring-app-e2bdd.firebaseio.com/</string>

=======
    <!-- User profile activity strings -->
    <string name="user_firstname">First Name</string>
    <string name="user_lastname">Last Name</string>
    <string name="user_createProfile">Create Profile</string>
    <string name="user_activityLabel">Create a User Profile</string>

    <string name="create_profile_pwdretype">Confirm Password</string>
    <string name="create_profile_alreadyhave">Already have an account? Login here.</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_test">test</string>
<<<<<<< HEAD
>>>>>>> weelcheel/prototype
=======

    <!-- home screen activity strings -->
    <string name="home_welcome">Welcome, </string>
>>>>>>> refs/remotes/weelcheel/Prototype
</resources>
